[tool.poetry]
name = "biq-couchbase"
version = "0.1.0"
description = ""
authors = ["debswade <deborah.wade@hivehome.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/debswade/biq-couchbase"

[tool.poetry.dependencies]
python = "^3.8"
couchbase = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
